--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rCj-a3-xcF">
-                                            <rect key="frame" x="0.0" y="138" width="320" height="58"/>
+                                            <rect key="frame" x="0.0" y="138" width="320" height="46"/>
                                             <connections>
                                                 <segue destination="Iim-03-1Nc" kind="embed" identifier="CategoriesInfo" id="X0C-KF-259"/>
                                             </connections>
@@ -783,34 +783,34 @@
                         <viewControllerLayoutGuide type="bottom" id="ZkX-M7-leA"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2jd-md-Oac">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7up-cW-8Pr">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="6pz-sd-gSv">
-                                    <size key="itemSize" width="137" height="58"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6pz-sd-gSv">
+                                    <size key="itemSize" width="130" height="46"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="7Q8-bJ-Hyt" customClass="CustomCollectionCell">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="137" height="58"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="130" height="46"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wc3-Yc-bC2">
-                                                    <rect key="frame" x="0.0" y="8" width="137" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Category Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wc3-Yc-bC2">
+                                                    <rect key="frame" x="0.0" y="2" width="130" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-1R-jSe">
-                                                    <rect key="frame" x="0.0" y="29" width="137" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-1R-jSe">
+                                                    <rect key="frame" x="0.0" y="23" width="130" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -818,6 +818,15 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="nfA-1R-jSe" secondAttribute="trailing" id="JjO-Xr-pvf"/>
+                                            <constraint firstItem="Wc3-Yc-bC2" firstAttribute="top" secondItem="7Q8-bJ-Hyt" secondAttribute="top" constant="2" id="OBY-qs-bhf"/>
+                                            <constraint firstItem="nfA-1R-jSe" firstAttribute="top" secondItem="Wc3-Yc-bC2" secondAttribute="bottom" id="QXa-Gm-4e2"/>
+                                            <constraint firstItem="Wc3-Yc-bC2" firstAttribute="leading" secondItem="7Q8-bJ-Hyt" secondAttribute="leading" id="Tlj-0e-suF"/>
+                                            <constraint firstAttribute="trailing" secondItem="Wc3-Yc-bC2" secondAttribute="trailing" id="V68-Zw-rdb"/>
+                                            <constraint firstAttribute="bottom" secondItem="nfA-1R-jSe" secondAttribute="bottom" constant="2" id="mFy-s6-jYi"/>
+                                            <constraint firstItem="nfA-1R-jSe" firstAttribute="leading" secondItem="7Q8-bJ-Hyt" secondAttribute="leading" id="mOe-rd-12a"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="amountLabel" destination="nfA-1R-jSe" id="H01-aU-9xk"/>
                                             <outlet property="categoryNameLabel" destination="Wc3-Yc-bC2" id="p4C-A9-uwh"/>
